# advent_of_code

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
2020/: CMakeLists.txt
2020/1/: 1.cpp
2020/10/: 10.cpp
2020/11/: 11.cpp
2020/12/: 12.cpp  input_test2
2020/13/: 13.cpp
2020/14/: 14.cpp
2020/15/: 15.cpp
2020/16/: 16.cpp
2020/17/: 17.cpp
2020/18/: 18.cpp
2020/19/: 19.cpp
2020/2/: 2.cpp
2020/3/: 3.cpp
2020/4/: 4.cpp
2020/5/: 5.cpp
2020/6/: 6.cpp
2020/7/: 7.cpp
2020/8/: 8.cpp
2020/9/: 9.cpp
2021/: CMakeLists.txt
2021/1/: 1.cpp
2021/10/: 10.cpp
2021/2/: 2.cpp
2021/3/: 3.cpp
2021/4/: 4.cpp
2021/5/: 5.cpp
2021/6/: 6.cpp
2021/7/: 7.cpp
2021/8/: 8.cpp
2021/9/: 9.cpp
2022/: Cargo.toml
2022/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  main.rs
